--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Pixelify+Sans&family=UnifrakturMaguntia&display=swap" 
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Pixelify+Sans&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=UnifrakturMaguntia&display=swap"
+    rel="stylesheet">
+    <script src="script.js"></script>
     <title>The Bogota Times</title>
 </head>
 <body>
-    
+    <header>
+        <div class="languages-buttons">
+            <button onclick="changeLenguage('es')">Spanish</button>           
+            <button onclick="changeLenguage('en')">English</button>                    
+        </div>
+        <h1 class="title-container">The Bogota Times</h1>
+        <div class="nav-container">
+            <nav class="nav-main">
+                <ul class="nav-menu">
+                    <li><a href="#Colombia"></a>Colombia</li>
+                    <li><a href="#World"></a>World</li>
+                    <li><a href="#Art"></a>Art</li>
+                    <li><a href="#Lifestyle"></a>Lifestyle</li>
+                    <li><a href="#Games"></a>Games</li>
+                    <li><a href="#Cooking"></a>Cooking</li>
+                </ul>    
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
