3. ADDING STYLES TO THE NAVBAR AND LANGUAGE BUTTONS, DATE AND SUBSCRIPTION BUTTON

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             <button onclick="changeLenguage('es')">Spanish</button>           
             <button onclick="changeLenguage('en')">English</button>                    
         </div>
-        <h1 class="title-container">The Bogota Times</h1>
+        <div class="title-container">
+            <span id="date">Today's date</span>
+            <h1 >The Bogota Times</h1>
+            <button onclick="logSubscription('en')">Suscribe for $0.95/week</button>                    
+        </div>
         <div class="nav-container">
             <nav class="nav-main">
                 <ul class="nav-menu">
