4. CREATING NEWS SECTION AND STYLING WITH FLEX BOX

--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
         </div>
     </header>
     <main>
-
+        <div class="news-container">
+            <div class="news-section">   
+                <h3>The world is ending!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                <h3>The world is ending!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+            </div>
+            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+            <div class="news-right-section">
+                <h3>The world is ending!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                <h3>The world is ending!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
