--- a/index.html
+++ b/index.html
@@ -37,20 +37,126 @@
     </header>
     <main>
         <div class="news-container">
-            <div class="news-section">   
-                <h3>The world is ending!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
-                <h3>The world is ending!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+            <div class="news-left-section">
+                <div class="newsmain-section">
+                    <div class="news-card1">
+                        <div class="news-section">   
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                            </div>
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                            </div>        
+                        </div>
+                        <div>
+                            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-section">   
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                            </div>
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                            </div>        
+                        </div>
+                        <div>
+                            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-section">   
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                            </div>
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                            </div>        
+                        </div>
+                        <div>
+                            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-section">   
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                            </div>
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                            </div>        
+                        </div>
+                        <div>
+                            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="news-card">
+                        <div class="news-section">   
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                            </div>
+                            <div>
+                                <h3>The world is ending!</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                            </div>        
+                        </div>
+                        <div>
+                            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <img src="library/pexels-rosemary-ketchum-1464230.jpg" alt="">
             <div class="news-right-section">
-                <h3>The world is ending!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
-                <h3>The world is ending!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                <div class="nrs-simple">
+                    <h3>The world is ending!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                </div>
+                <div class="nrs-img">
+                    <img src="library/pexels-brett-sayles-1343325.jpg" alt="">
+                    <h3>The world is ending!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                </div>
+                <div class="nrs-double">
+                    <div> 
+                        <h3>The world is ending!</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+                    </div>
+                    <div>
+                        <h3>The world is ending!</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="nrs-simple">
+                    <h3>The world is ending!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>        
+                </div>
+                <div class="nrs-img">
+                    <img src="library/pexels-brett-sayles-1343325.jpg" alt="">
+                    <h3>The world is ending!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit obcaecati, similique minus at officiis ratione labore sunt quam veritatis blanditiis alias adipisci architecto vero officia eveniet sapiente ea dicta!</p>
+                </div>
+                <div class="nrs-double">
+                    <div> 
+                        <h3>The world is ending!</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+                    </div>
+                    <div>
+                        <h3>The world is ending!</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </div>      
     </main>
 </body>
 </html>
